@@ -4,19 +4,30 @@ plugins {
 }
 
 
-repositories {
-    maven { 
-        url = uri("https://jitpack.io")
-    }
-    // mavenCentral()
-}
+// allprojects {
+//     repositories {
+//         maven { 
+//             url 'https://jitpack.io'
+//         }
+//     }
+// }
+
+
+// java {
+//     toolchain {
+//         languageVersion = JavaLanguageVersion.of(19)
+//     }
+// }
+
+// application {
+//     applicationDefaultJvmArgs = ["--enable-preview"]
+// }
+
 dependencies {
     // api project(':refdiff-core')
     // implementation 'org.eclipse.jdt:org.eclipse.jdt.core:3.16.0'
 
-    implementation 'io.github.tree-sitter:jtreesitter:0.23.2'
-
-
+    implementation 'io.github.tree-sitter:jtreesitter:0.24.0'
 
     // testImplementation 'junit:junit:4.11'
     // testImplementation project(path: ':refdiff-core', configuration: 'testArtifacts')
@@ -24,6 +35,12 @@ dependencies {
 
 task run(type: JavaExec) {
     classpath sourceSets.main.runtimeClasspath
-    main = 'refdiff.parsers.universal.Ast'
-    jvmArgs = ['-Djava.library.path=../tree-sitter-java-0.20.2']
+    mainClass = 'refdiff.parsers.universal.UniversalParser'
+    // jvmArgs = ['-Djava.library.path=../tree-sitter-java-0.20.2']
+    // jvmArgs = ['-Djava.library.path=../libtree-sitter-java.dylib']
+    // jvmArgs = ['-Djava.library.path=/Users/ikuya/Documents/TokyoTech/修論研究/Sandbox/tree-sitter-java/libtree-sitter-java.dylib']
+    jvmArgs = [
+        "--enable-native-access=ALL-UNNAMED",
+        "-Djava.library.path=/Users/ikuya/Documents/TokyoTech/修論研究/Sandbox/tree-sitter-java/"
+    ]
 }
